--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,20 @@
 :root {
+  --primary-dark: #1a237e;   
+  --primary: #0f5ca3;       
+  --primary-light: #f1af0d;  
+  --white: #ffffff;
+  --gray-100: #f8f9fa;
+  --gray-200: #e9ecef;
+  --gray-300: #dee2e6;
+  --gray-600: #6c757d;
+  --gray-800: #000000;
+  --error: #dc3545;
+  --success: #198754;
+
+  --background: var(--primary);
+  --text: var(--gray-800);
+  --border: var(--gray-300);
+
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -42,9 +58,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background: var(--gray-800);
+    --text: var(--white);
+    --border: var(--gray-600);
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
     --secondary-glow: linear-gradient(
@@ -83,16 +99,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: var(--background);
+  color: var(--text);
 }
 
 a {
